{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 154,
  "lineage": "cc7770d9-f3b0-9dcd-3654-31b59c7315e5",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "aaa_instance_aaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220204",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/disks/aenv6hmip-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/core-337701/zones/us-central1-a/instances/aenv6hmip-bastion",
            "instance_id": "1256939899079625737",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-2",
            "metadata_fingerprint": "Y7EuSgG9t_c=",
            "name": "aenv6hmip-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.192.99.208",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
                "network_ip": "10.100.255.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-bastion",
                "subnetwork_project": "core-337701"
              }
            ],
            "project": "core-337701",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/instances/aenv6hmip-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all",
              "bastion"
            ],
            "tags_fingerprint": "Ky1HmRXoc_U=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.networking.google_compute_address.aaa_instance_aaa-external",
            "module.networking.google_compute_network.aaa_network_aaa",
            "module.networking.google_compute_subnetwork.aaa_instance_aaa",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.gpu",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "aaa_instance_bbb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220204",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/disks/aenv6hmip-gpu-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/acceleratorTypes/nvidia-tesla-a100"
              }
            ],
            "id": "projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-0",
            "instance_id": "5043025953587465035",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "a2-highgpu-1g",
            "metadata_fingerprint": "Y7EuSgG9t_c=",
            "name": "aenv6hmip-gpu-0",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
                "network_ip": "10.100.1.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
                "subnetwork_project": "core-337701"
              }
            ],
            "project": "core-337701",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all",
              "gpu"
            ],
            "tags_fingerprint": "A698M93s7l8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "module.networking.google_compute_subnetwork.aaa_instance_bbb",
            "random_string.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220204",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/disks/aenv6hmip-gpu-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/acceleratorTypes/nvidia-tesla-a100"
              }
            ],
            "id": "projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-1",
            "instance_id": "2840344463936064414",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "a2-highgpu-1g",
            "metadata_fingerprint": "Y7EuSgG9t_c=",
            "name": "aenv6hmip-gpu-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
                "network_ip": "10.100.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
                "subnetwork_project": "core-337701"
              }
            ],
            "project": "core-337701",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all",
              "gpu"
            ],
            "tags_fingerprint": "A698M93s7l8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "module.networking.google_compute_subnetwork.aaa_instance_bbb",
            "random_string.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220204",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/disks/aenv6hmip-gpu-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/acceleratorTypes/nvidia-tesla-a100"
              }
            ],
            "id": "projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-2",
            "instance_id": "3772443446244543391",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "a2-highgpu-1g",
            "metadata_fingerprint": "Y7EuSgG9t_c=",
            "name": "aenv6hmip-gpu-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
                "network_ip": "10.100.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
                "subnetwork_project": "core-337701"
              }
            ],
            "project": "core-337701",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all",
              "gpu"
            ],
            "tags_fingerprint": "A698M93s7l8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "module.networking.google_compute_subnetwork.aaa_instance_bbb",
            "random_string.random"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220204",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/disks/aenv6hmip-gpu-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/acceleratorTypes/nvidia-tesla-a100"
              }
            ],
            "id": "projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-3",
            "instance_id": "4733563591291571103",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "a2-highgpu-1g",
            "metadata_fingerprint": "Y7EuSgG9t_c=",
            "name": "aenv6hmip-gpu-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
                "network_ip": "10.100.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
                "subnetwork_project": "core-337701"
              }
            ],
            "project": "core-337701",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/instances/aenv6hmip-gpu-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all",
              "gpu"
            ],
            "tags_fingerprint": "A698M93s7l8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "module.networking.google_compute_subnetwork.aaa_instance_bbb",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "aaa_instance_aaa-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.192.99.208",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-02-10T16:49:59.807-08:00",
            "id": "projects/core-337701/regions/us-central1/addresses/aenv6hmip-bastion-external",
            "name": "aenv6hmip-bastion-external",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "core-337701",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/addresses/aenv6hmip-bastion-external",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/core-337701/zones/us-central1-a/instances/aenv6hmip-bastion"
            ]
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "aaa_instance_bbb-external-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.123.11.156",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-02-10T16:49:59.791-08:00",
            "id": "projects/core-337701/regions/us-central1/addresses/aenv6hmip-gpu-external-nat",
            "name": "aenv6hmip-gpu-external-nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "core-337701",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/addresses/aenv6hmip-gpu-external-nat",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/routers/aenv6hmip-gpu"
            ]
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_to_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-10T16:50:21.656-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/core-337701/global/firewalls/bastion-to-aenv6hmip-gpu",
            "log_config": [],
            "name": "bastion-to-aenv6hmip-gpu",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
            "priority": 1000,
            "project": "core-337701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/global/firewalls/bastion-to-aenv6hmip-gpu",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "all"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internet_to_aaa_interface_aaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-10T16:50:21.656-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/core-337701/global/firewalls/internet-to-aenv6hmip-bastion",
            "log_config": [],
            "name": "internet-to-aenv6hmip-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
            "priority": 1000,
            "project": "core-337701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/global/firewalls/internet-to-aenv6hmip-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "aaa_network_aaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/core-337701/global/networks/aenv6hmip-network",
            "mtu": 0,
            "name": "aenv6hmip-network",
            "project": "core-337701",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network"
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "aaa_instance_bbb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-10T16:50:21.713-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/core-337701/regions/us-central1/routers/aenv6hmip-gpu",
            "name": "aenv6hmip-gpu",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
            "project": "core-337701",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/routers/aenv6hmip-gpu"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "aaa_instance_bbb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "core-337701/us-central1/aenv6hmip-gpu/aenv6hmip-gpu",
            "min_ports_per_vm": 0,
            "name": "aenv6hmip-gpu",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/addresses/aenv6hmip-gpu-external-nat"
            ],
            "project": "core-337701",
            "region": "us-central1",
            "router": "aenv6hmip-gpu",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.networking.google_compute_address.aaa_instance_bbb-external-nat",
            "module.networking.google_compute_network.aaa_network_aaa",
            "module.networking.google_compute_router.aaa_instance_bbb",
            "module.networking.google_compute_subnetwork.aaa_instance_bbb",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "aaa_instance_aaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-10T16:50:21.916-08:00",
            "gateway_address": "10.100.255.1",
            "id": "projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-bastion",
            "ip_cidr_range": "10.100.255.0/24",
            "name": "aenv6hmip-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-337701",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-bastion",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "aaa_instance_bbb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-10T16:50:23.571-08:00",
            "gateway_address": "10.100.1.1",
            "id": "projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
            "ip_cidr_range": "10.100.1.0/24",
            "name": "aenv6hmip-gpu",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aenv6hmip-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-337701",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/us-central1/subnetworks/aenv6hmip-gpu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.aaa_network_aaa",
            "random_string.random"
          ]
        }
      ]
    }
  ]
}